--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .user-form{
-    width: 100%;
+    width: 90%;
     max-width: 700%;
 }
 
@@ -34,5 +34,29 @@ body{
     box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
       0 15px 40px rgba(0, 0, 0, 0.1);
   }
+
+  .user-form input::placeholder {
+    color: #bbb;
+  }
   
-  
+  .user-form input:focus{
+    outline: none;
+  }
+
+  .card{
+    max-width: 800%;
+    background-color: #4c2885;
+    border-radius: 20px;
+    box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(0, 0, 0, 0.1);
+    display: flex;
+    padding: 3rem;
+    margin: 0 1.5px;
+
+  }
+
+  .avatar{
+    
+  }
+
+
