--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .user-form{
-    width: 90%;
+    width: 80%;
     max-width: 700%;
 }
 
@@ -33,6 +33,7 @@ body{
     font-size: 1rem;
     box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
       0 15px 40px rgba(0, 0, 0, 0.1);
+      
   }
 
   .user-form input::placeholder {
@@ -44,7 +45,7 @@ body{
   }
 
   .card{
-    max-width: 800%;
+    max-width: 500%;
     background-color: #4c2885;
     border-radius: 20px;
     box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
@@ -56,7 +57,46 @@ body{
   }
 
   .avatar{
-    
-  }
+    border-radius: 50%;
+    border: 10px solid #2a2a72;
+    height: 150px;
+    width: 150px;
+}
+
+.user-info{
+    color: #eee;
+    margin-left: 2rem;
+}
+
+.user-info h2{
+    margin-top: 0;
+
+}
+
+.user-info ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    max-width: 400px;
+}
+
+.user-info ul li {
+    display: flex;
+    align-items: center;
+}
+
+.user-info ul li strong{
+           
+    font-size: 0.9rem;
+    margin-left: 0.5rem;
+}
+
+
+
+
+
+
+
 
 
