--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .user-form{
-    width: 80%;
+    width: 90%;
     max-width: 700%;
 }
 
@@ -90,6 +90,18 @@ body{
            
     font-size: 0.9rem;
     margin-left: 0.5rem;
+}
+
+.repo{
+    text-decoration: none;
+    color: #fff;
+    background-color: #2a2a72;
+    font-size: 0.7rem;
+    padding: 0.25rem 0.5rem;
+    margin-right:0.5rem ;
+    margin-bottom: 0.5rem;
+    display: inline-block;
+
 }
 
 
