this styling for media query

--- a/style.css
+++ b/style.css
@@ -45,14 +45,14 @@ body{
   }
 
   .card{
-    max-width: 500%;
+    max-width: 300%;
     background-color: #4c2885;
     border-radius: 20px;
     box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
     0 15px 40px rgba(0, 0, 0, 0.1);
     display: flex;
     padding: 3rem;
-    margin: 0 1.5px;
+    margin: 0 15px;
 
   }
 
@@ -104,6 +104,18 @@ body{
 
 }
 
+@media(max-width:500px){
+
+    .card{
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .user-form{
+        max-width: 400px;
+    }
+
+}
 
 
 
